<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical" 
    android:id="@+id/root_lyaout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="10dip"
        android:layout_weight="1"
        android:background="@drawable/back_ground_for_num"
        android:padding="10dip"
        android:tag="@string/text_result" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:background="@android:color/black"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    style="@style/style_for_cal_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="7" 
                    android:tag="@string/num_7"/>

                <TextView
                    style="@style/style_for_cal_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="8"
                    android:tag="@string/num_8" />

                <TextView
                    style="@style/style_for_cal_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="9"
                    android:tag="@string/num_9" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    style="@style/style_for_cal_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="4" 
                    android:tag="@string/num_4"/>

                <TextView
                    style="@style/style_for_cal_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="5" 
                    android:tag="@string/num_5"/>

                <TextView
                    style="@style/style_for_cal_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="6" 
                    android:tag="@string/num_6"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    style="@style/style_for_cal_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="1"
                    android:tag="@string/num_1" />

                <TextView
                    style="@style/style_for_cal_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="2" 
                    android:tag="@string/num_2"/>

                <TextView
                    style="@style/style_for_cal_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="3" 
                    android:tag="@string/num_3"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    style="@style/style_for_cal_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="C"
                    android:layout_gravity="center"
                    android:gravity="center" 
                    android:tag="@string/clear"/>
                
                <TextView
                    style="@style/style_for_cal_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="0" 
                    android:tag="@string/num_0"/>

                <TextView
                    style="@style/style_for_cal_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="="
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:tag="@string/ops_equalto" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                style="@style/style_for_cal_ops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="/" 
                android:tag="@string/ops_divide"/>

            <TextView
                style="@style/style_for_cal_ops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="*" 
                android:tag="@string/ops_multiply"/>

            <TextView
                style="@style/style_for_cal_ops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-" 
                android:tag="@string/ops_subtract"/>

            <TextView
                style="@style/style_for_cal_ops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="+" 
                android:tag="@string/ops_add"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>